<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <import type="com.example.appchatkl.ui.register.RegisterViewModel"/>
        <variable
            name="register"
            type="RegisterViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_21sdp"
        android:layout_marginTop="@dimen/_20sdp"
        >
        <ImageView
            android:layout_width="@dimen/_33sdp"
            android:layout_height="@dimen/_44sdp"
            android:src="@drawable/left"
            android:id="@+id/img_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/dk"
            android:textSize="@dimen/sizeNameFrag"
            android:textColor="@color/blueDark"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_21sdp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hovaten"
                android:textSize="@dimen/text"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:hint="@string/hinthovaten"
                android:drawableRight="@drawable/personal1"
                android:text="@={register._fullName}"
                android:textColor="@color/black"
                android:textSize="@dimen/edit" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/email"
                android:textSize="@dimen/text" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:drawableRight="@drawable/ic_baseline_mail_outline_24"
                android:hint="@string/hintgmail"
                android:text="@={register._email}"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="@dimen/edit" />
            <TextView
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matkhau"
                android:textSize="@dimen/text"
                />
            <EditText
                android:text="@={register._passWord}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:hint="@string/hintmk"
                android:textSize="@dimen/edit"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:drawableRight="@drawable/key"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                >
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toidongy"
                    android:textSize="@dimen/text"
                    android:checked="@={register.check}"
                    android:button="@drawable/checkbox"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chinhsach"
                    android:textColor="@color/blueDark"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:textSize="@dimen/text"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/va"
                    android:textColor="@color/blueDark"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:textSize="@dimen/text"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dieukhoan"
                    android:textColor="@color/blueDark"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:textSize="@dimen/text"
                    />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="@dimen/_70sdp">
                <Button
                    android:id="@+id/btn_register"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/button"
                    android:text="@string/dk"
                    android:background="@drawable/button_"
                    app:backgroundTint="@null"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/txt_notifical1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@={register.notification}"
                    android:textColor="@color/red"
                    android:layout_alignParentTop="true"
                    />
            </RelativeLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/dacotaikhoan"
                    android:textSize="@dimen/text"
                    android:gravity="start"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/dnngay"
                    android:textSize="@dimen/text"
                    android:textColor="@color/blueDark"
                    android:id="@+id/txtdangnhap"
                    android:gravity="start"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>