<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <import type="com.example.appchatkl.ui.login.LoginViewModel"/>
        <variable
            name="login"
            type="LoginViewModel" />
      </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        >
        <ImageView
            android:id="@+id/img_plane_blue"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/plane_blue"
            android:layout_marginLeft="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:contentDescription="@string/tittle"
            android:layout_marginStart="@dimen/_21sdp" />
        <TextView
            android:textColor="@color/black"
            android:id="@+id/txt_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_below="@id/img_plane_blue"
            android:layout_marginLeft="@dimen/_21sdp"
            android:text="@string/tittle"
            android:textSize="@dimen/sizeTitle"
            android:layout_marginStart="@dimen/_21sdp" />
        <TextView
            android:id="@+id/txt_Dangnhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@id/txt_tittle"
            android:text="@string/dangnhap"
            android:textSize="@dimen/sizeNameFrag"
            android:layout_marginLeft="@dimen/_21sdp"
            android:textColor="@color/blueDark"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_21sdp" />
        <LinearLayout
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginRight="@dimen/_21sdp"
            android:layout_below="@id/txt_Dangnhap"
            android:layout_marginLeft="@dimen/_21sdp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/text"
                />
            <EditText
                android:id="@+id/edt_email"
                android:text="@={login._email}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:drawableRight="@drawable/ic_baseline_mail_outline_24"
                android:hint="@string/hintgmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="@dimen/edit"
                android:autofillHints=""
                android:drawableEnd="@drawable/ic_baseline_mail_outline_24" />
            <TextView
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matkhau"
                android:textSize="@dimen/text"
                />
            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:hint="@string/hintmk"
                android:text="@={login._passWord}"
                android:textSize="@dimen/edit"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:drawableRight="@drawable/key"
                android:autofillHints=""
                android:drawableEnd="@drawable/key" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quenMk"
                android:textColor="@color/blueDark"
                android:gravity="end"
                android:textSize="@dimen/text"
                />
            <TextView
                android:id="@+id/txt_notifical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{login.isNotification()}"
                android:textColor="@color/red"/>
            <Button
                android:id="@+id/btn_dn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/button_"
                android:text="@string/dangnhap_Button"
                app:backgroundTint="@null"
                android:textColor="@color/white"
                android:textSize="@dimen/button" />
            <LinearLayout
                android:gravity="bottom|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/chuacotaikhoan"
                    android:textSize="@dimen/text" />
                <TextView
                    android:id="@+id/txtRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dkngay"
                    android:textSize="@dimen/text"
                    android:textColor="@color/blueDark"
                    android:gravity="bottom"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>