<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".ui.content.createConversation.CreateConversationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/splash_background"
            android:layout_height="@dimen/_150sdp">
            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/leftwhite"
                android:scaleType="fitStart"
                android:id="@+id/btn_back"
                android:contentDescription="@string/imageback"
                android:layout_marginLeft="-10dp"
                android:layout_marginStart="-10dp" />
            <RelativeLayout
                android:layout_marginLeft="-20dp"
               android:paddingBottom="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taotinnhan"
                    android:textSize="@dimen/edit"
                    android:textColor="@color/white"
                    android:layout_marginRight="@dimen/_80sdp"
                    android:layout_toStartOf="@id/txtHuy"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:layout_toLeftOf="@id/txtHuy"
                    android:layout_marginEnd="@dimen/_80sdp" />
                <TextView
                    android:layout_margin="@dimen/_7sdp"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentRight="true"
                    android:text="@string/huy"
                    android:gravity="center"
                    android:textSize="@dimen/text"
                    android:textColor="@color/white"
                    android:id="@+id/txtHuy"
                    android:layout_alignParentEnd="true" />
                <SearchView
                   android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/button_mn"
                    android:queryHint="@string/tktinnhan"
                    android:iconifiedByDefault="false"
                    android:layout_marginBottom="@dimen/_40sdp"
                    android:drawableLeft="@drawable/find"
                    android:id="@+id/edtSearch"
                    android:layout_marginRight="@dimen/_10sdp"
                   android:drawableStart="@drawable/find"
                    android:layout_marginEnd="@dimen/_10sdp" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/rela_bottom"
            android:layout_marginTop="@dimen/_120sdp"
            android:background="@drawable/recyclerview"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsbanbe"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/text"
                android:textColor="#999999"
                android:layout_marginStart="@dimen/_10sdp" />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerview"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/recyclerview"
                />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/rela_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_53sdp"
            android:layout_alignParentBottom="true"
            android:visibility="visible"
            android:background="@color/white"
            android:padding="@dimen/_5sdp">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/recyclerview2"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/btn_ok"
                android:layout_toStartOf="@id/btn_ok" />
            <ImageButton
                android:id="@+id/btn_ok"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/button_"
                android:src="@drawable/ic_baseline_chevron_right_24"
                android:contentDescription="@string/imageNext"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </RelativeLayout>
</layout>