<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="com.example.appchatkl.data.User"/>
        <variable
            name="user"
            type="User" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:scaleType="fitXY"
            app:imageUri="@{user.linkPhoto}"
            android:contentDescription="@string/imageIcon" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_150sdp"
            android:background="@drawable/recyclerview"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_centerVertical="true"
                    android:id="@+id/img_avata_IF"
                    app:imageUri="@{user.linkPhoto}"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/edit"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/edit"

                    android:textStyle="bold"
                    android:text="@{user.fullName}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sizeTitle"
                    android:id="@+id/txt_Name"
                    android:layout_toEndOf="@id/img_avata_IF"
                    android:layout_toLeftOf="@id/img_avata_IF" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_avata_IF"
                    android:layout_centerVertical="true"
                    android:layout_below="@id/txt_Name"
                    android:textSize="@dimen/edit"
                    android:id="@+id/txt_email"
                    android:layout_toEndOf="@id/img_avata_IF" />
                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/edit"
                    android:id="@+id/edit"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/imageIcon"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:background="#EFEEEE"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="@dimen/_40sdp">

                <TextView
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="match_parent"
                    android:text="@string/ngongngu"
                    app:drawableLeftCompat="@drawable/language"
                    android:textColor="@color/black"
                    android:background="@drawable/topic_adap"
                    android:textSize="@dimen/edit"
                    android:gravity="start|center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:text="@string/tiengviet"
                    android:textColor="@color/black"
                    app:backgroundTint="@null"
                    android:textSize="@dimen/text"
                    android:drawableRight="@drawable/right"
                    android:drawableEnd="@drawable/right" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="@dimen/_30sdp">

                <TextView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="match_parent"
                    android:text="@string/thongbao"
                    android:textColor="@color/black"
                    android:background="@drawable/topic_adap"
                    android:textSize="@dimen/edit"
                    android:gravity="start|center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:drawableLeftCompat="@drawable/thongbao" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:drawableRight="@drawable/right"
                    app:backgroundTint="@null"
                    android:drawableEnd="@drawable/right" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="@dimen/_30sdp">

                <TextView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="match_parent"
                    android:text="@string/phienbanungdung"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textSize="@dimen/edit"
                    android:gravity="start|center"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:drawableLeftCompat="@drawable/circle" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:background="#EFEEEE"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:id="@+id/lineLogOut"
                android:layout_height="@dimen/_30sdp">

                <TextView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="match_parent"
                    android:text="@string/dangxuat"
                    android:textColor="@color/red"
                    android:textSize="@dimen/edit"
                    android:gravity="start|center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:drawableLeftCompat="@drawable/logout" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>